src/objects/Teller_Activity_Audit__c.object
<CustomObject>
    <fields>
        <fullName>ActivityAuditIdentifier__c</fullName>
        <description>Identifier for this activity - set as external id and unique to improve searching against activity audits</description>
        <externalId>true</externalId>
        <label>ActivityAuditIdentifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Amount__c</fullName>
        <label>Activity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity_Blob__c</fullName>
        <label>Activity Blob</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Activity_Currency__c</fullName>
        <label>Activity Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Date_Time__c</fullName>
        <label>Activity Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Activity_Description__c</fullName>
        <label>Activity Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Transaction</fullName>
                </value>
                <value>
                    <fullName>Customer Image</fullName>
                </value>
                <value>
                    <fullName>Mandate</fullName>
                </value>
                <value>
                    <fullName>Depository</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Branch_Number__c</fullName>
        <label>Branch Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created By User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Teller_Activity_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Account__c</fullName>
        <label>Credit_Account</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DML_Operation__c</fullName>
        <label>DML Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Insert</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Debit_Account__c</fullName>
        <label>Debit Account</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Id__c</fullName>
        <label>Object Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Till_Name__c</fullName>
        <label>Till Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Teller Activity Audit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Activity_Amount__c</columns>
        <columns>Activity_Date_Time__c</columns>
        <columns>Status__c</columns>
        <columns>Till_Name__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Teller Activity Audit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teller Activity Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>